# AiVoiceAnswers

./: .gitignore  README.md  requirements.txt
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  program_launcher.py  pyproject.toml  toml_gen.py
src/ai_voice_answers/: about.py  desktop.py  program.py  program_old.py
src/ai_voice_answers/modules/: consult.py  work_audio.py
